# pocketratings

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  compose.bastion.yaml  compose.override.bastion.example.yml  compose.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20250215000001_create_users.sql  20250215000002_create_categories.sql  20250215000003_create_products.sql  20250215000004_create_locations.sql  20250215000005_create_reviews.sql  20250215000006_create_purchases.sql  20250311000001_add_product_variations.sql
backend/scripts/: pre-push.sh
backend/src/: lib.rs  main.rs  test_helpers.rs  test_support.rs
backend/src/api/: category.rs  error.rs  location.rs  mod.rs  product.rs  product_variations.rs  purchase.rs  review.rs  router.rs  server.rs  state.rs  user.rs  version.rs
backend/src/api/auth/: jwt.rs  mod.rs  (+2 more)
backend/src/auth/: mod.rs  password.rs
backend/src/cli/: category.rs  database.rs  location.rs  mod.rs  product.rs  purchase.rs  review.rs  server.rs  user.rs
backend/src/config/: mod.rs
backend/src/db/: category.rs  location.rs  mod.rs  product.rs  product_variation.rs  purchase.rs  review.rs  user.rs
backend/src/domain/: category.rs  location.rs  mod.rs  product.rs  product_variation.rs  purchase.rs  review.rs  user.rs
backend/tests/: category_db_test.rs  cli_category_test.rs  cli_db_backup_test.rs  cli_location_test.rs  cli_product_test.rs  cli_purchase_test.rs  cli_review_test.rs  cli_server_test.rs  cli_user_delete_test.rs  cli_user_list_test.rs  cli_user_register_test.rs  db_test.rs  location_db_test.rs  product_db_test.rs  product_variation_db_test.rs  protected_routes_403_test.rs  purchase_db_test.rs  rest_auth_test.rs  review_db_test.rs  user_db_test.rs
(+152 files in other folders)
