[package]
name = "pocketratings"
version = "0.1.0"
edition = "2024"
description = "Product reviews and ratings — backend API and CLI"
license = "GPL-3.0"
readme = "../README.md"
keywords = ["ratings", "reviews", "products", "purchases"]
categories = ["web-programming", "command-line-utilities"]
repository = "https://github.com/yourusername/pocketratings"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pocketratings"
path = "src/main.rs"
